First release of Hello World!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Hello World</h1>
 	<p>This is the first file in my new Git Repo</p>
-	<p>This is a git repository</p>
+	<p>This is my git repository</p>
 	<ul>
 		<li>List</li>
 		<li>flow</li>
